# BlastCompany

./: .gitmodules  CMakeLists.txt  README.md  TODO  compile_commands.json  component.cpp  component.h  componentplugin.h  componentpluginloader.cpp  componentpluginloader.h  context.cpp  context.h  eid.h  entitycomponentmanager.cpp  entitycomponentmanager.h  functionmanager.cpp  functionmanager.h  game.h  hashmap.cpp  hashmap.h  hashnode.cpp  hashnode.h  imagetexturecomponent.cpp  imagetexturecomponent.h  main.cpp  namecomponent.cpp  namecomponent.h  planecomponent.cpp  planecomponent.h  planerendersystem.cpp  planerendersystem.h  quad.cpp  quad.h  rect.cpp  rect.h  resourceloader.cpp  resourceloader.h  sdlrenderer.cpp  sdlrenderer.h  system.cpp  (+19 more)
game/entities/: testentity.json
